- Integrated the CORS middleware into the HTTP server setup.
- Added validation to ensure trip start times are set at least 30 minutes into the future.
- Included logic to retrieve car owner details from the user session and add them to the trip data before publishing.
- Fixed issues with form submission to prevent premature closure and ensure trip data is sent to the backend correctly.

[2.0.0] - 15/12/2023
This commit introduces the foundational for the frontend aspect of the Car Pooling Service application. 

- An index.html file has been created to serve as the entry point to the application, along with accompanying CSS and JavaScript files to manage the presentation and interactive behavior of the application.
- The file structure is organized into separate folders for stylesheets (css) and scripts (js) to promote clean code organization and ease of development as the project grows.
- No functionality has been linked between the frontend and the backend services at this stage. 
- The next steps will include implementing AJAX calls to interact with the Go backend services for user authentication, trip browsing, enrollment, and management.

[1.1.3] - 14/12/2023
- Implemented a new HTTP handler `GetPastTripsForPassenger` to retrieve all past trips associated with a passenger, including those that are soft-deleted. 
- This handler responds to GET requests at the `/past-trips/passenger` endpoint with the `passengerID` as a query parameter.
- Updated the `main.go` in the trip-service to register the new route and modified the `viewPastTripsForPassenger` function in the console app to utilize the new endpoint correctly.
- This feature allows passengers to view a complete history of their trips, ensuring better transparency and record-keeping.
- Implemented direct call to loginOrSignUp function upon logout in showMainMenu
- Ensured that the user is immediately prompted for login or signup after logging out