@@ -10,6 +10,7 @@ All notable changes to this project will be documented in this file.
 - Added validation to ensure trip start times are set at least 30 minutes into the future.
 - Included logic to retrieve car owner details from the user session and add them to the trip data before publishing.
 - Fixed issues with form submission to prevent premature closure and ensure trip data is sent to the backend correctly.
+- The user interface has been updated to include a cancel button next to each enrolled trip. Upon clicking, the cancellation is processed, and the user receives a confirmation message. Error handling is in place to notify users of any issues during the process.
 
 [2.0.0] - 15/12/2023
 This commit introduces the foundational for the frontend aspect of the Car Pooling Service application. 
